--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,632 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #f5f7f8;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+/* Navbar css started */ 
+
+.navbar-container {
+  height: 48px;
+  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.16);
+  padding: 0 15px;
+  box-sizing: border-box;
+  background-color: #fff;
+}
+
+.navbar-content-container {
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 970px;
+  height: 100%;
+  margin: 0 auto;
+}
+
+.nav-logo {
+  width: 110px;
+  height: 20px;
+}
+
+.blue-btn {
+  background-color: #004fc1;
+  color: #fff;
+  min-height: 40px;
+}
+
+.blue-btn:hover {
+  background-color: #fff;
+  color: #004fc1;
+}
+
+.white-btn {
+  background-color: #fff;
+  color: #004fc1;
+  min-height: 40px;
+}
+
+.white-btn:hover {
+  background-color: #004fc1;
+  color: #fff;
+}
+
+.buttons-container {
+  display: flex;
+}
+
+.blue-btn, .white-btn {
+  padding: 10px 15px;
+  margin: 0 5px;
+  font-size: 14px;
+  font-family: Roboto;
+  border: 1px solid #004fc1;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: all 0.25s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  transition: all 0.25s;
+}
+
+@media (min-width: 1200px) {
+  .navbar-content-container {
+    max-width: 1170px;
+  }
+}
+
+@media (max-width: 575px) {
+  .buttons-container {
+    display: none;
+  }
+}
+
+@media (min-width: 576px) {
+  .buttons-container {
+    display: flex;
+  }
+}
+
+/* Navbar css end */ 
+
+.body-container {
+  padding: 0 15px;
+  margin: 15px 0;
+  position: relative;
+}
+.heading {
+  text-align: left;
+  font-size: 18px;
+  font-weight: 500;
+  margin: 8px 0;
+  color: #4a4a4a;
+}
+.education-box-container, .skills-box-container {
+  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.2) !important;
+}
+.education-content-heading {
+  color: #4a4a4a;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.education-content-description {
+  color: #959595;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.5;
+  margin-bottom: 1px;
+}
+
+.text-left {
+  text-align: left;
+}
+.text-center {
+  text-align: center;
+}
+
+.meter-ctr {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+  position: relative;
+}
+
+.meter-pellet {
+  width: 39px;
+  height: 8px;
+  margin: 0 1px 0 0;
+}
+
+.meter-pellet-1 {
+  border-radius: 8px 0 0 8px;
+  background-color: #f6efed;
+}
+
+.meter-pellet-2 {
+  background-color: #ffe1be;
+}
+
+.meter-pellet-3 {
+  background-color: #f7be6c;
+}
+
+.meter-pellet-4 {
+  background-color: #ff8100;
+}
+
+.meter-pellet-5 {
+  background-color: #d86d00;
+  border-radius: 0 8px 8px 0;
+}
+
+.meter-active-pellet {
+  border-radius: 8px !important;
+  box-shadow: 0 1px 4px 0 rgba(0,0,0,0.3);
+  height: 13px;
+  width: 40px;
+  border: 1px solid #fff;
+  position: absolute;
+  top: -4px;
+  left: 0px;
+  transition: all 1.2s;
+  transition-delay: 0.5s;
+  transition-timing-function: ease-out;
+}
+
+.skills-content-description {
+  font-size: 10px;
+  color: #4a4a4a;
+  font-weight: 400;
+}
+
+.divider {
+  margin: 15px 0 !important;
+}
+
+.edu-parent-ctr {
+  display: flex;
+}
+
+.education-image {
+  padding: 20px 10px 10px 10px;
+  height: 80px;
+  width: 80px;
+}
+
+.github-box-ctr {
+  display: flex;
+  padding: 30px;
+  justify-content: space-between;
+}
+
+.github-item-ctr {
+  display: flex;
+}
+
+.github-item-desc {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  padding: 0 10px;
+}
+
+.sub-text {
+  font-size: 10px;
+  color: #808080;
+}
+
+.value {
+  font-size: 16px;
+  font-weight: 700;
+  color: #4a4a4a;
+}
+
+.value-small {
+  font-size: 12px;
+  font-weight: 700;
+  color: #4a4a4a;
+}
+
+.justify-btw {
+  justify-content: space-between;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.github-link {
+  padding: 10px 30px;
+  text-decoration: none;
+  color: #004fc1;
+  font-size: 10px;
+  font-weight: 700;
+  display: block;
+}
+
+.footer-ctr {
+  background-color: #0b1547;
+  border-top: 10px solid #437bcb;
+  padding-top: 60px;
+  color: #fff;
+}
+
+.profile-img-ctr img {
+  height: 200px;
+  width: 200px;
+}
+
+.profile-card-content {
+  padding: 0 !important;
+}
+
+.mt-10 {
+  margin-top: 10px
+}
+
+.info-ctr {
+  padding-top: 15px;
+  padding-bottom: 0;
+  text-align: left;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.profile-box-ctr {
+  display: flex;
+}
+
+.user-name {
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 1.25;
+  color: #2b2e34;
+  text-transform: capitalize;
+  margin: 0;
+}
+
+.user-designation {
+  margin: 5px 0;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.24;
+  color: #2b2e34;
+  text-transform: capitalize;
+}
+
+.user-location {
+  margin: 5px 0;
+  font-size: 12px;
+  line-height: 1.25;
+  color: #959595;
+}
+
+#icon-messages {
+  margin-left: 5px;
+}
+
+@media (max-width: 767px) {
+  .info-ctr {
+    /*padding: 15px;*/
+    padding-bottom: 0;
+    text-align: left;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .profile-box-ctr {
+    margin-top: 20px;
+  }
+  .endorse-item-right {
+    justify-content: center !important;
+  }
+  .wrok-exp-detail-ctr {
+    text-align: center !important;
+  }
+}
+
+.user-proficiency-parent {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.skill-widget-ctr {
+  background: #f1f1f1;
+  line-height: 31px;
+  padding: 0 40px 0 20px;
+  border-radius: 21px;
+  display: flex;
+  align-items: center;
+  position: relative;
+  font-size: 12px;
+  margin-right: 10px;
+  text-transform: capitalize;
+  font-weight: 500;
+  color: #4a4a4a;
+}
+
+.click-ctr {
+  background-color: #d86d00;
+  border: 2px solid #ffffff;
+  height: 100%;
+  width: 31px;
+  position: absolute;
+  right: 0px;
+  cursor: pointer;
+  box-sizing: border-box;
+  border-radius: 50%;
+}
+
+.skill-widget-grid-ctr {
+  padding: 12px 0 !important;
+}
+
+.user-proficiency-parent {
+  padding: 0 15px 15px 15px;
+}
+
+.detail-container {
+  padding: 15px !important;
+}
+
+.user-profile-url {
+  padding: 10px 15px;
+  background-color: #fafafa;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.url {
+  margin:0;
+  font-size: 14px;
+  color: #808080
+}
+
+.yc-logo {
+  height: 34px;
+  width: 87px;
+}
+
+.yc-logo img {
+  width: 100%;
+  height: 100%;
+}
+
+.endorse-box-ctr {
+  padding: 20px 10px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.endorse-item-left, .endorse-item-right {
+  display: flex;
+  align-items: center;
+}
+
+.endorse-item-right {
+  justify-content: flex-end;
+}
+
+.endorse-github-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.experience-text, .exp-text {
+  color: #959595;
+  font-size: 10px;
+}
+
+.circular-chart {
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 4px;
+  width: 36px;
+  height: 35px;
+  max-width: 80%;
+  max-height: 250px;
+}
+
+.circle-bg {
+  fill: none;
+  stroke: #4cc790;
+  stroke-width: 2;
+}
+
+.circle {
+  fill: none;
+  stroke-width: 2;
+  stroke-linecap: round;
+  animation: progress 1s ease-out forwards;
+  stroke: #4cc790;
+}
+
+.percentage {
+  fill: #4cc790;
+  font-size: 1em;
+  text-anchor: middle;
+}
+.MuiDivider-vertical {
+  width: 1px !important;
+  height: 49px !important;
+  margin: 0 27px !important;
+}
+.skills-avatar-container {
+  display: flex;
+  justify-content: space-around;
+}
+
+.about-me {
+  background: #fff;
+  font-style: italic;
+  font-size: 18px;
+  padding: 20px 100px;
+  text-align: center;
+  font-style: italic;
+  font-weight: 400;
+  color: #4a4a4a;
+}
+
+.work-exp-item-img {
+  height: 60px;
+  width: 60px;
+}
+
+.company-name-header {
+  border-radius: 15px;
+  font-size: 12px;
+  color: #4a4a4a;
+  position: relative;
+  margin:0;
+  line-height: 30px;
+}
+
+.company-name {
+  color: #4a4a4a;
+  font-size: 16px;
+  font-weight: 500;
+  margin:0;
+  line-height: 30px;
+}
+
+.position-duration {
+  color: #959595;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.5;
+  margin-bottom: 1px;
+  margin:0;
+  line-height: 30px;
+}
+
+.work-exp-detail-divider {
+  margin: 20px 0 !important;
+}
+
+.work-exp-img-ctr {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.exp-skills {
+  border-radius: 21.29px;
+  padding: 5px 14px;
+  background-color: #f5f7f8;
+  position: relative;
+  font-size: 12px;
+  font-weight: 700;
+  display: inline-block;
+  color: #4a4a4a;
+  margin-right: 6px;
+  margin-bottom: 6px;
+  text-transform: capitalize;
+}
+
+.workedon {
+  font-size: 10px;
+  color: #959595;
+  line-height: 16px;
+}
+
+.footer-heading {
+  text-align: left;
+  font-size: 18px;
+  font-weight: 500;
+  margin-bottom: 20px;
+  color: #fff;
+  max-width: 220px;
+}
+
+.address-img {
+  height: 21px;
+  width: 118px;
+}
+
+.footer-text {
+  text-decoration: none;
+  font-size: 12px !important;
+  padding: 8px 0;
+  color: #f7f7f7;
+  max-width: 220px;
+  display: block;
+  text-align: left;
+}
+
+.term-condition {
+  display: flex;
+  justify-content: flex-end;
+  max-width: 965px;
+}
+
+.term-condition-divider {
+  background-color: #97979780;
+}
+
+.term-condition-text, .term-condition-text-border{
+  font-weight: 100;
+  color: #fff;
+  font-size: 10px;
+  padding: 5px 10px;
+  text-decoration: none;
+}
+
+.term-condition-text-border {
+  border-right: solid 0.5px #97979780;
+}
+
+.experience-txt {
+  font-size: 18px;
+  color: #4a4a4a;
+  font-weight: 500;
+  top: -9px;
+  position: absolute;
+  left: -8px;
+}
+
+.experience-txt span {
+  font-size: 8px;
+  position: absolute;
+  top: -2px;
+}
+
+.bars-ctr {
+  justify-content: space-between;
+  align-items: flex-end;
+  display: flex;
+  height: 32px;
+  width: 34px;
+  margin-bottom: 5px;
+  transition: all 1s;
+  transition-delay: 1s;
+  position: relative;
+}
+
+.grid-bar-1 {
+  background-color: #f7be6c;
+  height: 33%;
+  width: 10px
+}
+.grid-bar-2 {
+  background-color: #ff8100;
+  height: 66%;
+  width: 10px
+}
+.grid-bar-3 {
+  background-color: #d86d00;
+  height: 100%;
+  width: 10px
 }
